[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wdwgn-bot"
version = "0.1.0"
description = "Where Do We Go Now — Telegram bot for organizing social media content"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0,<4",
    "apscheduler>=3.10,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "chromadb>=0.4",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.0,<3",
    "structlog>=24.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "aioresponses>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
